route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-route
spec:
  to:
    kind: Service
    name: prometheus-service
  port:
    targetPort: 9090
  tls:
    termination: edge
